--- a/project pages/page1.html
+++ b/project pages/page1.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page 10.02</title>
-    <style></style>
-  </head>
-  <body>
-    <h1>Проект 10.02.25</h1>
-    <script></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    </head>
+    <body>
+    <p>
+    Составить программу вычисления значений функций:<br>
+    <div>
+    $$ A_z = F \cdot s $$
+    </div>
+    <div>
+    $$S = \sum_{k=1}^{10} k^3 \cdot \sum_{i=2}^{k+1} (i-1)^2 $$
+    </div>
+    <div>
+    $$S = \sum_{i=1}^{n} (((R_i-R_ср )^2)/n)$$
+    </div>
+    <div>
+    $$S_1 = \sum_{i=1}^{\infty} \frac{1}{1 + (2i)!}$$
+    </div>
+    <br>и q=7,25sinx-|y|<br> при любых </p>
   </body>
 </html>
