--- a/project pages/page1.html
+++ b/project pages/page1.html
@@ -11,7 +11,8 @@
     <p>
     Составить программу вычисления значений функций:<br>
     <div>
-    $$ A_z = F \cdot s $$
+        
+    $$ z=\frac{x+\frac{2+y}{x^2}}{y+\frac{1}{x^2+10}}$$
     </div>
     <div>
     $$S = \sum_{k=1}^{10} k^3 \cdot \sum_{i=2}^{k+1} (i-1)^2 $$
@@ -22,6 +23,6 @@
     <div>
     $$S_1 = \sum_{i=1}^{\infty} \frac{1}{1 + (2i)!}$$
     </div>
-    <br>и q=7,25sinx-|y|<br> при любых </p>
+    <br>и q=7,25sinx-|y|<br> при любых значениях x и y </p>
   </body>
 </html>
