--- a/project pages/page1.html
+++ b/project pages/page1.html
@@ -26,7 +26,7 @@
         <p>
           2.19 Составить программу рассчёта значений функций:<br>
         <div>
-          $$ x=\frac{\frac{2}{a^2+25}+b}{y+\frac{1}{\sqrt[]{x^2+10}}}$$</div><pre> </pre><br>и<pre> </pre><div>$$y=\frac{|a|+2sinb}{5,5a}$$ </div> 
+          $$ x=\frac{\frac{2}{a^2+25}+b}{\sqrt[]{b}+\frac{a+b}{2}}$$</div><pre> </pre><br>и<pre> </pre><div>$$y=\frac{|a|+2sinb}{5,5a}$$ </div> 
           <br> при любых значениях a и b
         </p>
       </div>
@@ -51,11 +51,38 @@
       <button onclick="four()">Посчитать</button>
       <script>
         function first() {
-          const x=prompt("Введите х");
-          const y=prompt("Введите y");
-          let z = (x+((2+y)/(x**2)))/(y+1/Math.sqrt(x**2+10));
+          const x=parseFloat(prompt("Введите х"));
+          const y=parseFloat(prompt("Введите y"));
+          let z = (x+((2+y)/(x**2)))/(y+(1/Math.sqrt(x**2+10)));
           let q = 7.25*Math.sin(x)-Math.abs(y);
-          alert("При х="+x+"и y="+y+" z="+z+", a q="+q)
+          alert("При х="+x+"и y="+y+": z="+z+", a q="+q)
+        }
+        function second() {
+          const a=parseFloat(prompt("Введите a"));
+          const b=parseFloat(prompt("Введите b"));
+          let x = ((2)/(a**2+25)+b)/(Math.sqrt(b)+(a+b)/2);
+          let y = (Math.abs(a)+2*Math.sin(b))/(5.5*a);
+          alert("При a="+a+"и b="+b+": x="+x+", a y="+y)
+        }
+        function third() {
+          const e=parseFloat(prompt("Введите e"));
+          const f=parseFloat(prompt("Введите f"));
+          const g=parseFloat(prompt("Введите g"));
+          const h=parseFloat(prompt("Введите h"));
+          let a = Math.sqrt(Math.abs(e-3/f)**3+g);
+          let b = Math.sin(e)+Math.cos(h)**2;
+          let c = ((33*g)/(e*f-3));
+          alert("При e="+e+", f="+f+", g="+g+"и h="+h+": a="+a+", b="+b+", а c="+c)
+        }
+        function four() {
+          const e=parseFloat(prompt("Введите e"));
+          const f=parseFloat(prompt("Введите f"));
+          const g=parseFloat(prompt("Введите g"));
+          const h=parseFloat(prompt("Введите h"));
+          let a = ((e+f/2)/(3));
+          let b = Math.abs(h**2-g);
+          let c = Math.sqrt((g-h)**2-3*Math.sin(e));
+          alert("При e="+e+", f="+f+", g="+g+"и h="+h+": a="+a+", b="+b+", а c="+c)
         }
       </script>
   </body>
