--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <li>
           <button class="button" data-modal="modal1">
             <div class="button-icon">
-              <img src="heart_5259461.png" alt="Icon" />
+              <img src="img/heart_5259461.png" alt="Icon" />
             </div>
             <div>
               <div class="button-title">Проект 1</div>
@@ -186,7 +186,7 @@
         <li>
           <button class="button" data-modal="modal2">
             <div class="button-icon">
-              <img src="heart_5259461.png" alt="Icon" />
+              <img src="img/heart_5259461.png" alt="Icon" />
             </div>
             <div>
               <div class="button-title">Проект 2</div>
@@ -198,7 +198,7 @@
         <li>
           <button class="button" data-modal="modal3">
             <div class="button-icon">
-              <img src="heart_5259461.png" alt="Icon" />
+              <img src="img/heart_5259461.png" alt="Icon" />
             </div>
             <div>
               <div class="button-title">Проект 3</div>
@@ -210,7 +210,7 @@
         <li>
           <button class="button" data-modal="modal4">
             <div class="button-icon">
-              <img src="heart_5259461.png" alt="Icon" />
+              <img src="img/heart_5259461.png" alt="Icon" />
             </div>
             <div>
               <div class="button-title">Проект 4</div>
@@ -222,7 +222,7 @@
         <li>
           <button class="button" data-modal="modal5">
             <div class="button-icon">
-              <img src="heart_5259461.png" alt="Icon" />
+              <img src="img/heart_5259461.png" alt="Icon" />
             </div>
             <div>
               <div class="button-title">Проект 5</div>
