Добавили первый проект

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="modal-header">
           <h5 class="modal-title">Проект 1</h5>
         </div>
-        <iframe class="modal-iframe" src="page1.html"></iframe>
+        <iframe class="modal-iframe" src="project pages/page1.html"></iframe>
       </div>
     </div>
 
