--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <div class="button-title">Проект 2</div>
               <div class="button-description">Описание</div>
             </div>
-            <span class="button-date">дата</span>
+            <span class="button-date">17.02.2025</span>
           </button>
         </li>
         <li>
