--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
             </div>
             <div>
               <div class="button-title">Проект 2</div>
-              <div class="button-description">Описание</div>
+              <div class="button-description">
+                Создание каталога через массив
+              </div>
             </div>
             <span class="button-date">17.02.2025</span>
           </button>
@@ -223,7 +225,6 @@
       </ul>
     </div>
 
-    <!-- Модальные окна -->
     <div id="modal1" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
@@ -238,9 +239,9 @@
       <div class="modal-content">
         <span class="close">&times;</span>
         <div class="modal-header">
-          <h5 class="modal-title">Уведомление</h5>
+          <h5 class="modal-title">Проект 2. Зоомагазин</h5>
         </div>
-        <iframe class="modal-iframe" src="page2.html"></iframe>
+        <iframe class="modal-iframe" src="project pages/page2.html"></iframe>
       </div>
     </div>
 
