--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <div class="modal-header">
           <h5 class="modal-title">Проект 1</h5>
         </div>
-        <iframe class="modal-iframe" src="project pages/page1.html"></iframe>
+        <a href="project pages/page1.html"></a>
       </div>
     </div>
 
