--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZooMagazin</title>
     <link rel="stylesheet" href="/css/page2.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header></header>
@@ -110,9 +116,9 @@
           product.name
         }" loading="lazy">
                   <h3>${product.name}</h3>
-                  <p>${product.description}</p>
+                  <p class="descr">${product.description}</p>
                   <div class="price">${formatPrice(product.price)}</div>
-                  <button class="btn">Подробнее</button>
+                  <button class="btn">Заказать</button>
                 </div>
               </div>
               `;
@@ -134,8 +140,8 @@
         const productWrappers = document.querySelectorAll(".product-wrapper");
         productWrappers.forEach((wrapper) => {
           wrapper.addEventListener("click", () => {
-            const productId = parseInt(wrapper.dataset.productId); // Получаем ID товара
-            openModal(productId); // Открываем модальное окно
+            const productId = parseInt(wrapper.dataset.productId);
+            openModal(productId);
           });
         });
       }
