--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -17,24 +17,22 @@
     <main>
       <div class="scrollbar" id="scrollbar"></div>
       <div class="products" id="productContainer"></div>
-    </main>
-    <footer></footer>
-
-    <!-- Модальное окно -->
-    <div id="productModal" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <div class="modal-body">
-          <img src="" alt="" class="modal-image" />
-          <div class="modal-details">
-            <h2 class="modal-title"></h2>
-            <p class="modal-description"></p>
-            <div class="modal-price"></div>
-            <button class="modal-order-button">Заказать</button>
+      <div id="productModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <div class="modal-body">
+            <img src="" alt="" class="modal-image" />
+            <div class="modal-details">
+              <h2 class="modal-title"></h2>
+              <p class="modal-description"></p>
+              <div class="modal-price"></div>
+              <button class="modal-order-button">Заказать</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </main>
+    <footer></footer>
 
     <script>
       let products = [
@@ -43,64 +41,128 @@
           name: "Корм PetJet сухой для собак",
           price: 2879,
           category: "Корм",
-          image: "/img/korm.jpg",
+          image: "/img/korm4.jpg",
           description: "Сухой корм для собак с говядиной",
-        },
-        {
-          id: 2,
-          name: "Масло лососевое для кошек",
-          price: 869,
-          category: "Витамины",
-          image: "/img/oil.jpg",
-          description: "Масло лососевое для кошек от фирмы PetJet",
         },
         {
           id: 3,
           name: "Ошейник",
           price: 499,
           category: "Аксессуары",
-          image: "/img/osheinik.jpg",
+          image: "/img/akses4.jpg",
           description: "Ошейник для собак нейлоновый",
+        },
+        {
+          id: 5,
+          name: "Корм PetJet сухой для собак",
+          price: 679,
+          category: "Корм",
+          image: "/img/korm1.jpg",
+          description: "Сухой корм для кошек с рыбой",
+        },
+        {
+          id: 7,
+          name: "Ошейник",
+          price: 549,
+          category: "Аксессуары",
+          image: "/img/akses2.jpg",
+          description: "Поводок для собак нейлоновый",
         },
         {
           id: 4,
           name: "Клетка для грызунов",
           price: 1299,
           category: "Клетки",
-          image: "/img/kletka.jpg",
+          image: "/img/kletk1.jpg",
           description: "Клетка для мелких грызунов двухэтажная. 40 Х 80 Х 60",
-        },
-        {
-          id: 5,
-          name: "Корм PetJet сухой для собак",
-          price: 2879,
-          category: "Корм",
-          image: "/img/korm.jpg",
-          description: "Сухой корм для собак с говядиной",
         },
         {
           id: 6,
           name: "Масло лососевое для кошек",
           price: 869,
           category: "Витамины",
-          image: "/img/oil.jpg",
+          image: "/img/vitanim1.jpg",
           description: "Масло лососевое для кошек от фирмы PetJet",
         },
         {
-          id: 7,
-          name: "Ошейник",
-          price: 499,
-          category: "Аксессуары",
-          image: "/img/osheinik.jpg",
-          description: "Ошейник для собак нейлоновый",
+          id: 2,
+          name: "Масло лососевое для кошек",
+          price: 869,
+          category: "Витамины",
+          image: "/img/vitanim2.jpg",
+          description: "Масло лососевое для кошек от фирмы PetJet",
         },
         {
           id: 8,
           name: "Клетка для грызунов",
           price: 1299,
           category: "Клетки",
-          image: "/img/kletka.jpg",
+          image: "/img/kletk2.jpg",
           description: "Клетка для мелких грызунов двухэтажная. 40 Х 80 Х 60",
+        },
+        {
+          id: 9,
+          name: "Ошейник",
+          price: 769,
+          category: "Аксессуары",
+          image: "/img/akses3.jpg",
+          description: "Ошейник для кошек серый",
+        },
+        {
+          id: 10,
+          name: "Ошейник",
+          price: 619,
+          category: "Аксессуары",
+          image: "/img/akses1.jpg",
+          description: "Свитер для кошек красный",
+        },
+        {
+          id: 11,
+          name: "Корм PetJet сухой для собак",
+          price: 1679,
+          category: "Корм",
+          image: "/img/korm2.jpg",
+          description: "Сухой корм для кошек с бараниной",
+        },
+        {
+          id: 12,
+          name: "Корм PetJet сухой для собак",
+          price: 379,
+          category: "Корм",
+          image: "/img/korm3.jpg",
+          description: "Сухой корм для крыс и мелких грызунов",
+        },
+        {
+          id: 13,
+          name: "Масло лососевое для кошек",
+          price: 869,
+          category: "Витамины",
+          image: "/img/vitanim3.jpg",
+          description: "Масло лососевое для кошек от фирмы PetJet",
+        },
+        {
+          id: 14,
+          name: "Масло лососевое для кошек",
+          price: 869,
+          category: "Витамины",
+          image: "/img/vitanim4.jpg",
+          description: "Масло лососевое для кошек от фирмы PetJet",
+        },
+        {
+          id: 15,
+          name: "Масло лососевое для кошек",
+          price: 869,
+          category: "Клетки",
+          image: "/img/kletk3.jpg",
+          description: "Масло лососевое для кошек от фирмы PetJet",
+        },
+        {
+          id: 16,
+          name: "Масло лососевое для кошек",
+          price: 869,
+          category: "Клетки",
+          image: "/img/kletk4.jpg",
+          description: "Масло лососевое для кошек от фирмы PetJet",
         },
       ];
 
@@ -165,16 +227,13 @@
         renderProducts(filteredProducts);
       }
 
-      // Получаем модальное окно
       const modal = document.getElementById("productModal");
-
-      // Функция для открытия модального окна и заполнения данными
       function openModal(productId) {
         const product = products.find((p) => p.id === productId);
 
         if (product) {
           document.querySelector(".modal-image").src = product.image;
-          document.querySelector(".modal-image").alt = product.name; // Добавляем alt
+          document.querySelector(".modal-image").alt = product.name;
           document.querySelector(".modal-title").textContent = product.name;
           document.querySelector(".modal-description").textContent =
             product.description;
@@ -187,15 +246,10 @@
         }
       }
 
-      // Получаем кнопку закрытия
       const closeBtn = document.querySelector(".modal .close");
-
-      // Обработчик закрытия модального окна по крестику
       closeBtn.addEventListener("click", () => {
         modal.style.display = "none";
       });
-
-      // Обработчик закрытия модального окна при клике вне его
       window.addEventListener("click", (event) => {
         if (event.target == modal) {
           modal.style.display = "none";
