--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -74,31 +74,35 @@
           price: 1299,
           category: "Клетки",
           image: "/img/kletk1.jpg",
-          description: "Клетка для мелких грызунов двухэтажная. 40 Х 80 Х 60",
+          description:
+            "Клетка для мелких грызунов четырёхэтажная. 100 Х 80 Х 60",
         },
         {
           id: 6,
-          name: "Масло лососевое для кошек",
+          name: "Витамины личинки мучного червя для грызунов",
           price: 869,
           category: "Витамины",
           image: "/img/vitanim1.jpg",
-          description: "Масло лососевое для кошек от фирмы PetJet",
+          description:
+            "Витамины личинки для грызунов (ежей, крыс, мышей). Лакомство для всеядных грызунов мучной червь от LITTLE ONE",
         },
         {
           id: 2,
-          name: "Масло лососевое для кошек",
-          price: 869,
+          name: "Сироп с витаминами для попугаев",
+          price: 779,
           category: "Витамины",
           image: "/img/vitanim2.jpg",
-          description: "Масло лососевое для кошек от фирмы PetJet",
+          description:
+            "Сироп с витаминами для попугаев. Кормовая добавка Beaphar Mausertropfen",
         },
         {
           id: 8,
-          name: "Клетка для грызунов",
+          name: "Клетка для шиншил",
           price: 1299,
           category: "Клетки",
           image: "/img/kletk2.jpg",
-          description: "Клетка для мелких грызунов двухэтажная. 40 Х 80 Х 60",
+          description:
+            "Клетка для шиншилл PetTails разборная, 58 Х 40 Х 65, серая",
         },
         {
           id: 9,
@@ -134,35 +138,37 @@
         },
         {
           id: 13,
-          name: "Масло лососевое для кошек",
-          price: 869,
+          name: "Витамины для беременных кошек",
+          price: 399,
           category: "Витамины",
           image: "/img/vitanim3.jpg",
-          description: "Масло лососевое для кошек от фирмы PetJet",
+          description: "Витамины в таблетках для кошек",
         },
         {
           id: 14,
           name: "Масло лососевое для кошек",
-          price: 869,
+          price: 569,
           category: "Витамины",
           image: "/img/vitanim4.jpg",
-          description: "Масло лососевое для кошек от фирмы PetJet",
+          description: "Витаминный прикорм для попугаев",
         },
         {
           id: 15,
-          name: "Масло лососевое для кошек",
+          name: "Сумка переносная",
           price: 869,
           category: "Клетки",
           image: "/img/kletk3.jpg",
-          description: "Масло лососевое для кошек от фирмы PetJet",
+          description:
+            "Сумка переноска для кошек и домашних животных 40 Х 25 Х 25 см",
         },
         {
           id: 16,
-          name: "Масло лососевое для кошек",
+          name: "Переноска для собак и кошек",
           price: 869,
           category: "Клетки",
           image: "/img/kletk4.jpg",
-          description: "Масло лососевое для кошек от фирмы PetJet",
+          description:
+            "Переноска-клиппер Mps SKUDO 2 с металлической дверцей 55 Х 36 Х 35 см",
         },
       ];
 
