--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -13,7 +13,64 @@
     />
   </head>
   <body>
-    <header></header>
+    <header>
+      <img src="/img/Mask group.png" alt="Логотип PetJet" class="logo" />
+      <nav>
+        <a href="#"
+          ><div class="cerb">Каталог <img src="/img/Vector.svg" /></div
+        ></a>
+        <a href="#"
+          ><div class="cerb">
+            Избранное
+            <img
+              src="/img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+            /></div
+        ></a>
+        <a href="#"
+          ><div class="cerb">Корзина <img src="/img/Vector (1).svg" /></div
+        ></a>
+        <a href="#"
+          ><div class="cerb">
+            Войти
+            <img
+              src="/img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+            /></div
+        ></a>
+      </nav>
+    </header>
+    <div class="men">
+      <div class="burger-menu">
+        <div class="menu-icon" id="burger-icon">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+      </div>
+      <nav class="nav-menu" id="nav-menu">
+        <ul>
+          <a href="#"
+            ><div class="cerb">Каталог <img src="/img/Vector.svg" /></div
+          ></a>
+          <a href="#"
+            ><div class="cerb">
+              Избранное
+              <img
+                src="/img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+              /></div
+          ></a>
+          <a href="#"
+            ><div class="cerb">Корзина <img src="/img/Vector (1).svg" /></div
+          ></a>
+          <a href="#"
+            ><div class="cerb">
+              Войти
+              <img
+                src="/img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+              /></div
+          ></a>
+        </ul>
+      </nav>
+    </div>
     <main>
       <div class="scrollbar" id="scrollbar"></div>
       <div class="products" id="productContainer"></div>
@@ -32,9 +89,38 @@
         </div>
       </div>
     </main>
-    <footer></footer>
-
+    <footer class="footer">
+      <div class="footer-section">
+        <p>Как связаться с нами</p>
+        <p style="opacity: 70%; font-size: 20px">+7(495)-777-77-77</p>
+        <div class="social-icons">
+          <a href="#"><img src="/img/vk.svg" alt="VK" /></a>
+          <a href="#"><img src="/img/tg.svg" alt="Telegram" /></a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <p>Пользователям</p>
+        <ul>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка и оплата</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <p>О нас</p>
+        <ul>
+          <li><a href="#">Адреса</a></li>
+          <li><a href="#">О компании</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+    </footer>
     <script>
+      document
+        .getElementById("burger-icon")
+        .addEventListener("click", function () {
+          const navMenu = document.getElementById("nav-menu");
+          navMenu.classList.toggle("active");
+        });
       let products = [
         {
           id: 1,
@@ -71,7 +157,7 @@
         {
           id: 4,
           name: "Клетка для грызунов",
-          price: 1299,
+          price: 2499,
           category: "Клетки",
           image: "/img/kletk1.jpg",
           description:
@@ -155,7 +241,7 @@
         {
           id: 15,
           name: "Сумка переносная",
-          price: 869,
+          price: 599,
           category: "Клетки",
           image: "/img/kletk3.jpg",
           description:
