--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <img src="/img/Mask group.png" alt="Логотип PetJet" class="logo" />
+      <img src="/img/logozoo.svg" alt="Логотип PetJet" class="logo" />
       <nav>
         <a href="#"
           ><div class="cerb">Каталог <img src="/img/Vector.svg" /></div
