--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -92,7 +92,9 @@
     <footer class="footer">
       <div class="footer-section">
         <p>Как связаться с нами</p>
-        <p style="opacity: 70%; font-size: 20px">+7(495)-777-77-77</p>
+        <ul>
+          <li><a href="#">+7(495)-777-77-77</a></li>
+        </ul>
         <div class="social-icons">
           <a href="#"><img src="/img/vk.svg" alt="VK" /></a>
           <a href="#"><img src="/img/tg.svg" alt="Telegram" /></a>
