Пофиксила пару багов

--- a/project pages/page2.html
+++ b/project pages/page2.html
@@ -3,20 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ссылка на магазин</title>
     <style>
       body {
         text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: rgb(111, 0, 201);
+        font-size: x-large;
+        text-decoration: none;
       }
       img {
-        width: 40%;
-        height: 40%;
+        width: 100%;
         border-radius: 50%;
         border: 4px rgb(111, 0, 201) solid;
       }
     </style>
   </head>
   <body>
-    <a href="zoomagazin.html" target="_blank"><img src="/img/logozoo.svg" /></a>
+    <a href="zoomagazin.html" target="_blank"
+      ><img src="/img/logozoo.svg" />Открыть интернет-магазин</a
+    >
   </body>
 </html>
