--- a/project pages/page2.html
+++ b/project pages/page2.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <a href="zoomagazin.html" target="_blank"
-      ><img src="/img/logozoo.svg" />Открыть интернет-магазин</a
+      ><img src="../img/logozoo.svg" />Открыть интернет-магазин</a
     >
   </body>
 </html>
