--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -14,26 +14,26 @@
   </head>
   <body>
     <header>
-      <img src="/img/logozoo.svg" alt="Логотип PetJet" class="logo" />
+      <img src="../img/logozoo.svg" alt="Логотип PetJet" class="logo" />
       <nav>
         <a href="#"
-          ><div class="cerb">Каталог <img src="/img/Vector.svg" /></div
+          ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
         ></a>
         <a href="#"
           ><div class="cerb">
             Избранное
             <img
-              src="/img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+              src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
             /></div
         ></a>
         <a href="#"
-          ><div class="cerb">Корзина <img src="/img/Vector (1).svg" /></div
+          ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
         ></a>
         <a href="#"
           ><div class="cerb">
             Войти
             <img
-              src="/img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+              src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
             /></div
         ></a>
       </nav>
@@ -49,23 +49,23 @@
       <nav class="nav-menu" id="nav-menu">
         <ul>
           <a href="#"
-            ><div class="cerb">Каталог <img src="/img/Vector.svg" /></div
+            ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
           ></a>
           <a href="#"
             ><div class="cerb">
               Избранное
               <img
-                src="/img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+                src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
               /></div
           ></a>
           <a href="#"
-            ><div class="cerb">Корзина <img src="/img/Vector (1).svg" /></div
+            ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
           ></a>
           <a href="#"
             ><div class="cerb">
               Войти
               <img
-                src="/img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+                src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
               /></div
           ></a>
         </ul>
@@ -96,8 +96,8 @@
           <li><a href="#">+7(495)-777-77-77</a></li>
         </ul>
         <div class="social-icons">
-          <a href="#"><img src="/img/vk.svg" alt="VK" /></a>
-          <a href="#"><img src="/img/tg.svg" alt="Telegram" /></a>
+          <a href="#"><img src="../img/vk.svg" alt="VK" /></a>
+          <a href="#"><img src="../img/tg.svg" alt="Telegram" /></a>
         </div>
       </div>
       <div class="footer-section">
@@ -129,7 +129,7 @@
           name: "Корм PetJet сухой для собак",
           price: 2879,
           category: "Корм",
-          image: "/img/korm4.jpg",
+          image: "../img/korm4.jpg",
           description: "Сухой корм для собак с говядиной",
         },
         {
@@ -137,7 +137,7 @@
           name: "Ошейник",
           price: 499,
           category: "Аксессуары",
-          image: "/img/akses4.jpg",
+          image: "../img/akses4.jpg",
           description: "Ошейник для собак нейлоновый",
         },
         {
@@ -145,7 +145,7 @@
           name: "Корм PetJet сухой для собак",
           price: 679,
           category: "Корм",
-          image: "/img/korm1.jpg",
+          image: "../img/korm1.jpg",
           description: "Сухой корм для кошек с рыбой",
         },
         {
@@ -153,7 +153,7 @@
           name: "Ошейник",
           price: 549,
           category: "Аксессуары",
-          image: "/img/akses2.jpg",
+          image: "../img/akses2.jpg",
           description: "Поводок для собак нейлоновый",
         },
         {
@@ -161,7 +161,7 @@
           name: "Клетка для грызунов",
           price: 2499,
           category: "Клетки",
-          image: "/img/kletk1.jpg",
+          image: "../img/kletk1.jpg",
           description:
             "Клетка для мелких грызунов четырёхэтажная. 100 Х 80 Х 60",
         },
@@ -170,7 +170,7 @@
           name: "Витамины личинки мучного червя для грызунов",
           price: 869,
           category: "Витамины",
-          image: "/img/vitanim1.jpg",
+          image: "../img/vitanim1.jpg",
           description:
             "Витамины личинки для грызунов (ежей, крыс, мышей). Лакомство для всеядных грызунов мучной червь от LITTLE ONE",
         },
@@ -179,7 +179,7 @@
           name: "Сироп с витаминами для попугаев",
           price: 779,
           category: "Витамины",
-          image: "/img/vitanim2.jpg",
+          image: "../img/vitanim2.jpg",
           description:
             "Сироп с витаминами для попугаев. Кормовая добавка Beaphar Mausertropfen",
         },
@@ -188,7 +188,7 @@
           name: "Клетка для шиншил",
           price: 1299,
           category: "Клетки",
-          image: "/img/kletk2.jpg",
+          image: "../img/kletk2.jpg",
           description:
             "Клетка для шиншилл PetTails разборная, 58 Х 40 Х 65, серая",
         },
@@ -197,7 +197,7 @@
           name: "Ошейник",
           price: 769,
           category: "Аксессуары",
-          image: "/img/akses3.jpg",
+          image: "../img/akses3.jpg",
           description: "Ошейник для кошек серый",
         },
         {
@@ -205,7 +205,7 @@
           name: "Ошейник",
           price: 619,
           category: "Аксессуары",
-          image: "/img/akses1.jpg",
+          image: "../img/akses1.jpg",
           description: "Свитер для кошек красный",
         },
         {
@@ -213,7 +213,7 @@
           name: "Корм PetJet сухой для собак",
           price: 1679,
           category: "Корм",
-          image: "/img/korm2.jpg",
+          image: "../img/korm2.jpg",
           description: "Сухой корм для кошек с бараниной",
         },
         {
@@ -221,7 +221,7 @@
           name: "Корм PetJet сухой для собак",
           price: 379,
           category: "Корм",
-          image: "/img/korm3.jpg",
+          image: "../img/korm3.jpg",
           description: "Сухой корм для крыс и мелких грызунов",
         },
         {
@@ -229,7 +229,7 @@
           name: "Витамины для беременных кошек",
           price: 399,
           category: "Витамины",
-          image: "/img/vitanim3.jpg",
+          image: "../img/vitanim3.jpg",
           description: "Витамины в таблетках для кошек",
         },
         {
@@ -237,7 +237,7 @@
           name: "Масло лососевое для кошек",
           price: 569,
           category: "Витамины",
-          image: "/img/vitanim4.jpg",
+          image: "../img/vitanim4.jpg",
           description: "Витаминный прикорм для попугаев",
         },
         {
@@ -245,7 +245,7 @@
           name: "Сумка переносная",
           price: 599,
           category: "Клетки",
-          image: "/img/kletk3.jpg",
+          image: "../img/kletk3.jpg",
           description:
             "Сумка переноска для кошек и домашних животных 40 Х 25 Х 25 см",
         },
@@ -254,7 +254,7 @@
           name: "Переноска для собак и кошек",
           price: 869,
           category: "Клетки",
-          image: "/img/kletk4.jpg",
+          image: "../img/kletk4.jpg",
           description:
             "Переноска-клиппер Mps SKUDO 2 с металлической дверцей 55 Х 36 Х 35 см",
         },
