Адаптив Бургер-меню

--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <img src="../img/logozoo.svg" alt="Логотип PetJet" class="logo" />
+      <img src="../img/Mask group.png" alt="Логотип PetJet" class="logo" />
       <nav>
         <a href="#"
           ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
@@ -49,27 +49,36 @@
       <nav class="nav-menu" id="nav-menu">
         <ul>
           <a href="#"
-            ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
+            ><div class="negr">Каталог <img src="../img/Vector.svg" /></div
           ></a>
+          <img src="../img/-_.svg" class="strela o" />
+          <img src="../img/Line 5.svg" class="line" />
           <a href="#"
-            ><div class="cerb">
+            ><div class="negr">
               Избранное
               <img
                 src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
               /></div
           ></a>
+          <img src="../img/-_.svg" class="strela t" />
+          <img src="../img/Line 5.svg" class="line" />
           <a href="#"
-            ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
+            ><div class="negr">Корзина <img src="../img/Vector (1).svg" /></div
           ></a>
+          <img src="../img/-_.svg" class="strela th" />
+          <img src="../img/Line 5.svg" class="line" />
           <a href="#"
-            ><div class="cerb">
+            ><div class="negr">
               Войти
               <img
                 src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
               /></div
           ></a>
+          <img src="../img/-_.svg" class="strela f" />
+          <img src="../img/Line 5.svg" class="line" />
         </ul>
       </nav>
+      <div style="height: 40px"></div>
     </div>
     <main>
       <div class="scrollbar" id="scrollbar"></div>
