--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -277,6 +277,7 @@
         return `
               <div class="product-wrapper" data-product-id="${product.id}">
                 <div class="card">
+                  <button class="love"><img src="../img/favorite.svg"></button>
                   <img src="${product.image}" alt="${
           product.name
         }" loading="lazy">
