ЧТО-ТО ИСПРАВИЛА

--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -29,7 +29,7 @@
         <a href="#"
           ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
         ></a>
-        <a href="#"
+        <a href="#" id="openRegistration"
           ><div class="cerb">
             Войти
             <img
@@ -362,6 +362,11 @@
 
       renderProducts();
       renderRazdel();
+
+      //избранное
+      //корзина
+
+      //авторизация регистрация
     </script>
   </body>
 </html>
