--- a/project pages/zooizbrannoe.html
+++ b/project pages/zooizbrannoe.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZooMagazin</title>
     <link rel="stylesheet" href="../css/page2.css" />
+    <link rel="stylesheet" href="../css/izbran.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,5 +13,204 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="../img/Mask group.png" alt="Логотип PetJet" class="logo" />
+      <nav>
+        <a href="zoomagazin.html"
+          ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
+        ></a>
+        <a href="#"
+          ><div class="cerb">
+            Избранное
+            <img
+              src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+            /></div
+        ></a>
+        <a href="#"
+          ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
+        ></a>
+        <a href="#"
+          ><div class="cerb">
+            Войти
+            <img
+              src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+            /></div
+        ></a>
+      </nav>
+    </header>
+    <div class="men">
+      <div class="burger-menu">
+        <div class="menu-icon" id="burger-icon">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+      </div>
+      <nav class="nav-menu" id="nav-menu">
+        <ul>
+          <a href="#"
+            ><div class="negr">Каталог <img src="../img/Vector.svg" /></div
+          ></a>
+          <img src="../img/-_.svg" class="strela o" />
+          <img src="../img/Line 5.svg" class="line" />
+          <a href="#"
+            ><div class="negr">
+              Избранное
+              <img
+                src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+              /></div
+          ></a>
+          <img src="../img/-_.svg" class="strela t" />
+          <img src="../img/Line 5.svg" class="line" />
+          <a href="#"
+            ><div class="negr">Корзина <img src="../img/Vector (1).svg" /></div
+          ></a>
+          <img src="../img/-_.svg" class="strela th" />
+          <img src="../img/Line 5.svg" class="line" />
+          <a href="#"
+            ><div class="negr">
+              Войти
+              <img
+                src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+              /></div
+          ></a>
+          <img src="../img/-_.svg" class="strela f" />
+          <img src="../img/Line 5.svg" class="line" />
+        </ul>
+      </nav>
+      <div style="height: 40px"></div>
+    </div>
+    <main>
+      <div class="nazv"><h1>Избранное</h1></div>
+      <div class="products" id="productContainer"></div>
+      <div id="productModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <div class="modal-body">
+            <img src="" alt="" class="modal-image" />
+            <div class="modal-details">
+              <h2 class="modal-title"></h2>
+              <p class="modal-description"></p>
+              <div class="modal-price"></div>
+              <button class="modal-order-button">Заказать</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer-section">
+        <p>Как связаться с нами</p>
+        <ul>
+          <li><a href="#">+7(495)-777-77-77</a></li>
+        </ul>
+        <div class="social-icons">
+          <a href="#"><img src="../img/vk.svg" alt="VK" /></a>
+          <a href="#"><img src="../img/tg.svg" alt="Telegram" /></a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <p>Пользователям</p>
+        <ul>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка и оплата</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <p>О нас</p>
+        <ul>
+          <li><a href="#">Адреса</a></li>
+          <li><a href="#">О компании</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+    </footer>
+    <script>
+      document
+        .getElementById("burger-icon")
+        .addEventListener("click", function () {
+          const navMenu = document.getElementById("nav-menu");
+          navMenu.classList.toggle("active");
+        });
+      let products = [
+        {
+          id: 1,
+          name: "Корм PetJet сухой для собак",
+          price: 2879,
+          category: "Корм",
+          image: "../img/korm4.jpg",
+          description: "Сухой корм для собак с говядиной",
+        },
+      ];
+
+      function formatPrice(price) {
+        return price.toLocaleString("ru-RU") + " ₽";
+      }
+
+      function createProductCard(product) {
+        return `
+              <div class="product-wrapper" data-product-id="${product.id}">
+                <div class="card">
+                  <button class="love"><img src="../img/favorite.svg"></button>
+                  <img src="${product.image}" alt="${
+          product.name
+        }" loading="lazy">
+                  <h3>${product.name}</h3>
+                  <p class="descr">${product.description}</p>
+                  <div class="price">${formatPrice(product.price)}</div>
+                  <button class="btn">Заказать</button>
+                </div>
+              </div>
+              `;
+      }
+
+      function renderProducts(filteredProducts = products) {
+        let productHTML = filteredProducts
+          .map(function (product) {
+            return createProductCard(product);
+          })
+          .join("");
+        document.getElementById("productContainer").innerHTML = productHTML;
+        const productWrappers = document.querySelectorAll(".product-wrapper");
+        productWrappers.forEach((wrapper) => {
+          wrapper.addEventListener("click", () => {
+            const productId = parseInt(wrapper.dataset.productId);
+            openModal(productId);
+          });
+        });
+      }
+
+      const modal = document.getElementById("productModal");
+      function openModal(productId) {
+        const product = products.find((p) => p.id === productId);
+
+        if (product) {
+          document.querySelector(".modal-image").src = product.image;
+          document.querySelector(".modal-image").alt = product.name;
+          document.querySelector(".modal-title").textContent = product.name;
+          document.querySelector(".modal-description").textContent =
+            product.description;
+          document.querySelector(".modal-price").textContent = formatPrice(
+            product.price
+          );
+          modal.style.display = "block";
+        } else {
+          console.error("Product not found with id:", productId);
+        }
+      }
+
+      const closeBtn = document.querySelector(".modal .close");
+      closeBtn.addEventListener("click", () => {
+        modal.style.display = "none";
+      });
+      window.addEventListener("click", (event) => {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      });
+
+      renderProducts();
+    </script>
+  </body>
 </html>
